--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/view/RootLayout.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
+<BorderPane prefHeight="500.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.view.RootLayoutController">
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="imageV" fitHeight="69.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="banniereCarsat" fitHeight="69.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <viewport>
                   <Rectangle2D height="69.0" width="200.0" />
                </viewport>
@@ -28,7 +28,12 @@
          <children>
             <VBox id="hov" onMouseClicked="#afficherOrdresMission" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Ordres de mission">
+                  <ImageView fx:id="imageOM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <VBox.margin>
+                        <Insets left="55.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Ordres de mission">
                      <padding>
                         <Insets bottom="15.0" top="15.0" />
                      </padding></Label>
@@ -36,7 +41,12 @@
             </VBox>
             <VBox id="hov" onMouseClicked="#afficherFraisMission" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Frais de mission">
+                  <ImageView fx:id="imageFM" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <VBox.margin>
+                        <Insets left="55.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Frais de mission">
                      <padding>
                         <Insets bottom="15.0" top="15.0" />
                      </padding></Label>
@@ -44,12 +54,22 @@
             </VBox>
             <VBox id="hov" onMouseClicked="#afficherHorairesTravail" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Horaires de travail" />
+                  <ImageView fx:id="imageHT" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <VBox.margin>
+                        <Insets left="55.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Horaires de travail" />
                </children>
             </VBox>
             <VBox id="hov" onMouseClicked="#modifierOptions" prefHeight="75.0" prefWidth="150.0" stylesheets="@../hover.css">
                <children>
-                  <Label alignment="CENTER" prefHeight="75.0" prefWidth="150.0" text="Paramètres" />
+                  <ImageView fx:id="imageParametre" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                     <VBox.margin>
+                        <Insets left="55.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <Label alignment="CENTER" prefHeight="35.0" prefWidth="150.0" text="Paramètres" />
                </children>
             </VBox>
          </children>
