--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Transport.fxml
@@ -137,7 +137,7 @@
                      <HBox.margin>
                         <Insets left="-30.0" top="25.0" />
                      </HBox.margin></Button>
-                  <Button mnemonicParsing="false" onAction="#signerOM" prefWidth="75.0" text="Signer">
+                  <Button fx:id="boutonSigner" mnemonicParsing="false" onAction="#signerOM" prefWidth="75.0" text="Signer">
                      <HBox.margin>
                         <Insets top="25.0" />
                      </HBox.margin>
