--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/itemOrdreMission.fxml
@@ -3,7 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox fx:id="boite" prefHeight="100.0" prefWidth="298.0" style="-fx-border-color: black;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.ItemOrdreMissionController">
@@ -18,18 +21,26 @@
             <Label fx:id="datesLabel" prefHeight="50.0" prefWidth="200.0" text="Du 12/00/0000 au 00/00/0000" />
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
             <Button mnemonicParsing="false" onAction="#afficherOrdreMissionPDF" prefWidth="75.0" text="Afficher" />
-            <Button mnemonicParsing="false" onAction="#modifierOM" prefWidth="75.0" text="Modifier" />
-            <Button mnemonicParsing="false" onAction="#afficherEnvoiMail" prefHeight="27.0" prefWidth="81.0" text="Envoyer" />
+            <Button mnemonicParsing="false" onAction="#modifierOM" prefWidth="75.0" text="Modifier" GridPane.columnIndex="1" />
+            <Button fx:id="boutonEnvoyer" mnemonicParsing="false" onAction="#afficherEnvoiMail" prefHeight="27.0" prefWidth="81.0" text="Envoyer" GridPane.columnIndex="2" />
+            <Button fx:id="boutonSigner" mnemonicParsing="false" onAction="#signerOM" prefHeight="27.0" prefWidth="81.0" text="Signer" GridPane.columnIndex="2" />
          </children>
          <VBox.margin>
-            <Insets />
+            <Insets left="15.0" />
          </VBox.margin>
-         <padding>
-            <Insets left="5.0" />
-         </padding>
-      </HBox>
+      </GridPane>
    </children>
 </VBox>
