--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisTransport.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/FraisTransport.fxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
- 
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -77,12 +77,12 @@
                   <Insets right="225.0" />
                </GridPane.margin>
             </TextField>
-            <Button mnemonicParsing="false" text="&lt;&lt; Retour" GridPane.rowIndex="5">
+            <Button mnemonicParsing="false" onAction="#afficherFraisLogement" text="&lt;&lt; Retour" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="50.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Enregistrer" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <Button mnemonicParsing="false" onAction="#sauvegarderFrais" text="Enregistrer" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets />
                </GridPane.margin>
