--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Options.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.OptionsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.OptionsController">
    <children>
       <TextField fx:id="textFieldCheminDossierOM" layoutX="258.0" layoutY="60.0" maxWidth="200.0" prefHeight="25.0" prefWidth="149.0" />
       <Label layoutX="18.0" layoutY="65.0" prefHeight="19.0" prefWidth="240.0" text="Chemin vers les ordres de mission :" />
@@ -18,7 +18,8 @@
       <Label layoutX="19.0" layoutY="124.0" prefHeight="19.0" prefWidth="240.0" text="Chemin votre signature :" />
       <Button layoutX="419.0" layoutY="119.0" mnemonicParsing="false" onAction="#choisirCheminSignature" text="..." />
       <Label layoutX="19.0" layoutY="229.0" prefHeight="19.0" prefWidth="240.0" text="Votre adresse mail :" />
-      <TextField fx:id="textFieldMailAgent" layoutX="258.0" layoutY="224.0" prefHeight="27.0" prefWidth="250.0" />
+      <TextField fx:id="textFieldMailAgent" layoutX="258.0" layoutY="224.0" prefHeight="27.0" prefWidth="150.0" />
+      <Label fx:id="domaineLabel" layoutX="408.0" layoutY="228.0" text="\@domaine.com" />
       <Label layoutX="18.0" layoutY="278.0" prefHeight="19.0" prefWidth="240.0" text="Mail de votre/vos responsable(s)" />
       <ChoiceBox fx:id="selectMailResponsable" layoutX="258.0" layoutY="273.0" prefHeight="27.0" prefWidth="203.0" />
       <Button layoutX="469.0" layoutY="273.0" mnemonicParsing="false" onAction="#ajouterResponsable" text="+" />
