--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/JourHoraireTravail.fxml
@@ -12,15 +12,15 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="550.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.JourHoraireTravailController">
+<AnchorPane prefHeight="520.0" prefWidth="700.0" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.iut.groupemaxime.gestioncarsat.agent.view.JourHoraireTravailController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="550.0" prefWidth="700.0">
+      <VBox alignment="TOP_CENTER" prefHeight="520.0" prefWidth="700.0">
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="39.0" prefWidth="800.0">
                <children>
                   <Label alignment="TOP_LEFT" text="Veuillez sélectionner les horaires de travail réalisés lors de la journée du ">
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="10.0" top="10.0" />
                      </VBox.margin>
                   </Label>
                   <Label fx:id="dateJournee" text="12/34/5678">
@@ -88,13 +88,13 @@
                   </TextField>
                </children>
                <VBox.margin>
-                  <Insets bottom="20.0" top="20.0" />
+                  <Insets bottom="10.0" top="20.0" />
                </VBox.margin>
             </GridPane>
             <HBox prefHeight="29.0" prefWidth="800.0">
                <children>
                   <HBox prefHeight="29.0" prefWidth="400.0" />
-                  <Button mnemonicParsing="false" onAction="#btnSuivantHoraire" text="Suivant">
+                  <Button fx:id="boutonValider" mnemonicParsing="false" onAction="#validerJournee" text="Suivant">
                      <HBox.margin>
                         <Insets left="150.0" />
                      </HBox.margin>
