--- a/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais1.fxml
+++ b/ProjetCarsat/src/fr/iut/groupemaxime/gestioncarsat/agent/view/Frais1.fxml
@@ -54,7 +54,8 @@
 		<Button layoutX="528.0" layoutY="446.0" mnemonicParsing="false"
 			onAction="#afficherFrais2" prefHeight="30.0" prefWidth="100.0"
 			text="Suivant &gt;&gt;" />
-		<Button layoutX="285.0" layoutY="447.0" mnemonicParsing="false"
+		<Button fx:id="bouttonAucunFrais" layoutX="285.0"
+			layoutY="447.0" mnemonicParsing="false"
 			onAction="#afficherJourSuivant" text="Aucun frais pour ce jour" />
 		<Button fx:id="btnRetour" layoutX="57.0" layoutY="447.0"
 			mnemonicParsing="false" onAction="#afficherJourAvant"
